--- a/luncheons.html
+++ b/luncheons.html
@@ -40,6 +40,56 @@
 			<h2>Individual luncheon tickets: $25</h2>
 			<p>A limited number of these tickets are available and can be purchased by calling 
 			559.555.1212. These tickets must be purchased by the Friday prior to the lecture.</p>
+			
+			<h2>The luncheon schedule</h2>
+			<table>
+				<tr>
+					<th>Year</th>
+					<th>Date</th>
+					<th>Speaker</th>
+					<th>Cost</th>
+				</tr>
+				<tr>
+					<td>2017</td>
+					<td>October 19</td>
+					<td>David Brancaccio</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>November 16</td>
+					<td>Andrew Ross Sorkin</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>January 18</td>
+					<td>Amy Chua</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>2018</td>
+					<td>February 16</td>
+					<td>Scott Sampson</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>March 21</td>
+					<td>Carlos Eire</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>April 18</td>
+					<td>Roman Tynan</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<th>Cost of 6 individual luncheon tickets</th>
+					<td>$150></td>
+				</tr>
+				<tr>
+					<th>Cost of a season luncheon ticket</th>
+					<td>$120</td>
+				</tr>
+			</table>
  		</section>
 		<aside>
 			<h2>Guest speakers</h2>
