--- a/luncheons.html
+++ b/luncheons.html
@@ -53,37 +53,37 @@
 					<td>2017</td>
 					<td>October 19</td>
 					<td>David Brancaccio</td>
-					<td>$25</td>
+					<td class="right">$25</td>
 				</tr>
 				<tr>
 					<td>November 16</td>
 					<td>Andrew Ross Sorkin</td>
-					<td>$25</td>
+					<td class="right">$25</td>
 				</tr>
 				<tr>
 					<td>January 18</td>
 					<td>Amy Chua</td>
-					<td>$25</td>
+					<td class="right">$25</td>
 				</tr>
 				<tr>
 					<td>2018</td>
 					<td>February 16</td>
 					<td>Scott Sampson</td>
-					<td>$25</td>
+					<td class="right">$25</td>
 				</tr>
 				<tr>
 					<td>March 21</td>
 					<td>Carlos Eire</td>
-					<td>$25</td>
+					<td class="right">$25</td>
 				</tr>
 				<tr>
 					<td>April 18</td>
 					<td>Roman Tynan</td>
-					<td>$25</td>
+					<td class="right">$25</td>
 				</tr>
 				<tr>
 					<th>Cost of 6 individual luncheon tickets</th>
-					<td>$150></td>
+					<td>$150</td>
 				</tr>
 				<tr>
 					<th>Cost of a season luncheon ticket</th>
