--- a/luncheons.html
+++ b/luncheons.html
@@ -50,19 +50,19 @@
 					<th>Cost</th>
 				</tr>
 				<tr>
-					<td>2017</td>
+					<td class="right">2017</td>
 					<td>October 19</td>
 					<td>David Brancaccio</td>
 					<td class="right">$25</td>
 				</tr>
 				<tr>
-					<td>November 16</td>
-					<td>Andrew Ross Sorkin</td>
+					<td class="right">November 16</td>
+					<td class="right">Andrew Ross Sorkin</td>
 					<td class="right">$25</td>
 				</tr>
 				<tr>
-					<td>January 18</td>
-					<td>Amy Chua</td>
+					<td class="right">January 18</td>
+					<td class="right">Amy Chua</td>
 					<td class="right">$25</td>
 				</tr>
 				<tr>
@@ -72,22 +72,22 @@
 					<td class="right">$25</td>
 				</tr>
 				<tr>
-					<td>March 21</td>
-					<td>Carlos Eire</td>
+					<td class="right">March 21</td>
+					<td class="right">Carlos Eire</td>
 					<td class="right">$25</td>
 				</tr>
 				<tr>
-					<td>April 18</td>
-					<td>Roman Tynan</td>
+					<td class="right">April 18</td>
+					<td class="right">Roman Tynan</td>
 					<td class="right">$25</td>
 				</tr>
 				<tr>
 					<th>Cost of 6 individual luncheon tickets</th>
-					<td>$150</td>
+					<td class="right">$150</td>
 				</tr>
 				<tr>
 					<th>Cost of a season luncheon ticket</th>
-					<td>$120</td>
+					<td class="right">$120</td>
 				</tr>
 			</table>
  		</section>
