--- a/luncheons.html
+++ b/luncheons.html
@@ -44,10 +44,10 @@
 			<h2>The luncheon schedule</h2>
 			<table>
 				<tr>
-					<th>Year</th>
-					<th>Date</th>
-					<th>Speaker</th>
-					<th>Cost</th>
+					<th class="left">Year</th>
+					<th class="left">Date</th>
+					<th class="left">Speaker</th>
+					<th></th>Cost</th>
 				</tr>
 				<tr>
 					<td>2017</td>
