--- a/luncheons.html
+++ b/luncheons.html
@@ -47,7 +47,7 @@
 					<th class="left">Year</th>
 					<th class="left">Date</th>
 					<th class="left">Speaker</th>
-					<th>Cost</th>
+					<th class="left">Cost</th>
 				</tr>
 				<tr>
 					<td>2017</td>
