--- a/luncheons.html
+++ b/luncheons.html
@@ -45,7 +45,7 @@
 			<table>
 				<tr>
 					<th class="left">Year</th>
-					<th class="left">Date</th>
+					<th class="middle">Date</th>
 					<th class="left">Speaker</th>
 					<th class="left">Cost</th>
 				</tr>
