--- a/luncheons.html
+++ b/luncheons.html
@@ -50,7 +50,7 @@
 					<th class="left">Cost</th>
 				</tr>
 				<tr>
-					<td>2017</td>
+					<td class="border">2017</td>
 					<td>October 19</td>
 					<td>David Brancaccio</td>
 					<td class="right">$25</td>
