--- a/luncheons.html
+++ b/luncheons.html
@@ -56,7 +56,7 @@
 					<td class="right">$25</td>
 				</tr>
 				<tr>
-					<td class="right">November 16</td>
+					<td class="border2">November 16</td>
 					<td class="right">Andrew Ross Sorkin</td>
 					<td class="right">$25</td>
 				</tr>
