--- a/luncheons.html
+++ b/luncheons.html
@@ -82,12 +82,15 @@
 					<td class="right">$25</td>
 				</tr>
 				<tr>
-					<th>Cost of 6 individual luncheon tickets</th>
+					<th class="border3">Cost of 6 individual luncheon tickets</th>
 					<td class="right">$150</td>
 				</tr>
 				<tr>
 					<th>Cost of a season luncheon ticket</th>
 					<td class="right">$120</td>
+				</tr>
+				<tr>
+					<th>Savings</th>
 				</tr>
 			</table>
  		</section>
