--- a/luncheons.html
+++ b/luncheons.html
@@ -90,7 +90,7 @@
 					<td class="right">$120</td>
 				</tr>
 				<tr>
-					<th>Savings</th>
+					<th class="border">Savings</th>
 				</tr>
 			</table>
  		</section>
