--- a/luncheons.html
+++ b/luncheons.html
@@ -52,7 +52,7 @@
 				<tr>
 					<td class="border">2017</td>
 					<td>October 19</td>
-					<td>David Brancaccio</td>
+					<td class="additonal border">David Brancaccio</td>
 					<td class="right">$25</td>
 				</tr>
 				<tr>
