--- a/luncheons.html
+++ b/luncheons.html
@@ -87,7 +87,7 @@
 				</tr>
 				<tr>
 					<th>Cost of a season luncheon ticket</th>
-					<td class="right">$120</td>
+					<td class="border2">$120</td>
 				</tr>
 				<tr>
 					<th class="border">Savings</th>
