--- a/luncheons.html
+++ b/luncheons.html
@@ -52,7 +52,7 @@
 				<tr>
 					<td class="border">2017</td>
 					<td>October 19</td>
-					<td class="additonalborder">David Brancaccio</td>
+					<td class="additionalborder">David Brancaccio</td>
 					<td class="right">$25</td>
 				</tr>
 				<tr>
@@ -83,7 +83,7 @@
 				</tr>
 				<tr>
 					<th class="border3">Cost of 6 individual luncheon tickets</th>
-					<td class="right">$150</td>
+					<td class="additionalborder">$150</td>
 				</tr>
 				<tr>
 					<th>Cost of a season luncheon ticket</th>
