--- a/luncheons.html
+++ b/luncheons.html
@@ -63,7 +63,7 @@
 				<tr>
 					<td class="right">January 18</td>
 					<td class="right">Amy Chua</td>
-					<td class="right">$25</td>
+					<td class="additionalborder">$25</td>
 				</tr>
 				<tr>
 					<td>2018</td>
